--- a/website/templates/website/test.html
+++ b/website/templates/website/test.html
@@ -17,9 +17,13 @@
             <a class="active" href="/test">Test</a>
           </nav>
     </body>
-    <div class="centered">
-        <pre>
-            *Test content*
-        </pre>
+    <div class="maintext">
+        <p>you found the secret page</p>
+        <p class="hidden">FTB</p>
+        <p>Congratulations</p>
+    </div>
+    <div class="loader"></div>
+    <div class="maintext">
+        <p>more is coming!</p>
     </div>
 </html>
