added commands + donate page

--- a/website/templates/website/donate.html
+++ b/website/templates/website/donate.html
@@ -1,3 +1,5 @@
+<!--DQW5M6M2wBZvLu3jw5B4LkSTwTyT5MSKEJ-->
+
 <!--Javascript-->
 
 
@@ -19,8 +21,16 @@
           </nav>
     </body>
     <div class="maintext">
-        <p>
-            bot
-        </p>
+        <pre>
+        <strong>Send Dogecoin here:</strong> DQW5M6M2wBZvLu3jw5B4LkSTwTyT5MSKEJ
+
+
+        <strong>Send Bitcoin here:</strong> 1LYwC9h6gqPT1gDW7WEXsy7ZfjCNKKNxkH
+ 
+
+        if you use and enjoy our bot please consider donating some crypto to 
+        our address. any donation helps, thanks for using our bot; we hope you
+        enjoy the vibes. 
+        </pre>
     </div>
 </html>
