--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -15,7 +15,7 @@
             <a class="active"href="/">Home</a>
             <a href="/bot">Bot</a> 
             <a href="/commands">Commands</a>
-            <a href="/">Donate</a>
+            <a href="/donate">Donate</a>
           </nav>
     </body>
     <div class="maintext">
