--- a/website/templates/website/donate.html
+++ b/website/templates/website/donate.html
@@ -15,9 +15,9 @@
     <body>
         <nav class="topnav">
             <a href="/">Home</a>
-            <a class="active" href="/bot">Bot</a> 
+            <a href="/bot">Bot</a> 
             <a href="/commands">Commands</a>
-            <a href="/donate">Donate</a>
+            <a class="active" href="/donate">Donate</a>
           </nav>
     </body>
     <div class="maintext">
